...
                Picker("Info. de los libros", selection: $settings.bookView) {
                    ForEach(BookViewMode.allCases) { mode in
                        Text(mode.title).tag(mode)
                    }
                }
            } header: {
                Text("Biblioteca")
            }

            Section {
                Toggle("En progreso", isOn: $settings.boards.progress)
                Toggle("Tu tablero", isOn: $settings.boards.tablero)
                Toggle("Leer más tarde", isOn: $settings.boards.readLater)
...
