...
        return preferences
    }
}

final class NovelNavigatorController: UIViewController {
    static let searchAction = EditingAction(
        title: "Buscar en Yomiyasu",
        action: #selector(NovelNavigatorController.searchSelectionAction(_:))
    )

    let navigator: EPUBNavigatorViewController

    var onLocatorChange: ((Locator) -> Void)?
...
